# pwdgen

./: README.md  pyproject.toml
pwdgen/: __init__.py  generator.py  validator.py
tests/: run_tests.py  test_secure_password.py  test_simple_password.py
